--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo-white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Portfólio de Marcelo Maia, desenvolvedor full-stack com experiência em React, Node.js, NestJS, e mais." />
+    <title>Marcelo Maia | Desenvolvedor Full-Stack</title>
   </head>
   <body>
     <div id="root"></div>
