feat: Melhoria em todo layout

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo-white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfólio de Marcelo Maia, desenvolvedor full-stack com experiência em React, Node.js, NestJS, e mais." />
+    <meta name="theme-color" content="#080808" />
+    <meta name="author" content="Marcelo Maia" />
+
+    <!-- Open Graph (fallback) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Marcelo Maia | Full-Stack Developer" />
+    <meta property="og:description" content="Portfólio de Marcelo Maia, desenvolvedor full-stack com experiência em React, Node.js, NestJS, e mais." />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter Card (fallback) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Marcelo Maia | Full-Stack Developer" />
+    <meta name="twitter:description" content="Portfólio de Marcelo Maia, desenvolvedor full-stack." />
+
     <title>Marcelo Maia | Desenvolvedor Full-Stack</title>
   </head>
   <body>
